[project]
name = "blog-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langgraph-cli[inmem]>=0.4.31",
    "uvicorn>=0.51.0",
    "watchdog>=6.0.0",
]
